# latency_constrained_sequence_labelling_case_study

./: README.md  pyproject.toml
artifacts/: ner_results.csv  pos_tagging_results.csv
experiments/: ner.ipynb  pos_tagging.ipynb  visualization.ipynb
notebooks/: ner.ipynb  pos_tagging.ipynb  visualization.ipynb
sequence_tagging_benchmark/: taggers.py
sequence_tagging_benchmark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
